[package]
name = "archspec"
version = "0.1.0"
authors = ["Lars Viklund <zao@zao.se>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12"
cfg-if = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.5"