[package]
name = "archspec"
version = "0.1.0"
authors = ["Bas Zalmstra <bas@prefix.dev>", "Lars Viklund <zao@zao.se>"]
description = "Provides standardized human-readable labels for aspects and capabilities of a system"
license = "MIT OR Apache-2.0"
edition = "2018"
resolver = "2"
include = ["src/*", "json/cpu/*.json"]
readme = "README.md"
repository = "https://github.com/prefix-dev/archspec-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12"
cfg-if = "1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.5"
